# awaker

./: .gitignore  .query.md  .worktreeinclude  AGENTS.md  CONTEXT.md  STATUS.md  harness.toml  project_overview.md  settings.gradle.kts
.github/workflows/: regen-status.yml
.scratch/awaker-v1/issues/: 01-docs-hygiene.md  02-candidate-app-session-detection.md  03-sensor-raw-logging-and-export.md  04-as-scroll-collection-teacher-rule.md  05-checkpoint-overlay-extension-n1.md  06-voluntary-exit-refresh-sound.md  07-offline-replay-harness.md  08-browser-candidates.md  09-youtube-scroll-blindspot.md  10-interleaved-sessions-replay-parity.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
docs/: log-schema.md
docs/adr/: 0001-checkpoint-message-prefetch.md  0002-android-only-v1.md  0003-progressive-occlusion.md  0004-permission-light-sensor-fusion.md  0005-llm-data-boundary-and-caching.md  0006-progressive-onboarding-and-data-governance.md  0007-v1-north-star-and-guardrails.md  0008-openrouter-as-llm-gateway.md  0010-detection-label-kinematic-proxy.md  0011-proto-live-trigger-and-offline-replay.md  0012-kotlin-compose-native-client.md  0013-candidate-app-expansion-path.md  0014-session-scoped-state-follows-active-session.md
gradle/: libs.versions.toml
replay/: README.md  pyproject.toml
replay/awaker_replay/: __init__.py  cli.py  gyro_heuristic.py  replay.py  report.py  schema.py  teacher_rule.py  windows.py
replay/tests/: fixtures.py  test_heuristic.py  test_replay_parity.py  test_schema.py  test_windows.py
scripts/: status.py
(+50 files in other folders)
